--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,5 @@
-/target/
-*.swp
-*~
-/Cargo.lock
-/.vscode/
-*.code-workspace
-*/db
+Player-Data/
+Programs/Public-Input/
+Programs/Bytecode/
+Programs/Schedules/
+libSPDZ.so
