--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,6 +5,8 @@ exclude = 'redis*'
 [tool.flake8]
 filename = ["*.py", "*.mpc"]
 exclude = ["redis*", ]
+max-line-length = 88
+extend-ignore = "E203"
 
 [tool.isort]
 profile = "black"
