--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,11 +4,11 @@ exclude = 'redis*'
 
 [tool.flake8]
 filename = ["*.py", "*.mpc"]
-exclude = ["redis*", ]
+exclude = ["redis*", ".venv"]
 max-line-length = 88
 extend-ignore = "E203"
 
 [tool.isort]
 profile = "black"
-skip_glob = ["redis*", ]
+skip_glob = ["redis*", ".venv"]
 supported_extensions = ["mpc", ]
