Mp spdz prototype (#77)
merging in the MP-SPDZ prototype used for benchmarking

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
 black
 flake518
 isort
+docopt
+schema
+-e git+ssh://git@github.com/eriktaubeneck/MP-SPDZ.git@39b6d7e22dedc5798823d306741d33ff6635bc25#egg=mp_spdz_compiler
