--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,14 +1,14 @@
 [tool.black]
 include = '\.(py|mpc)$'
-extend-exclude = '(^/\.venv/|^/redis*)'
+extend-exclude = '(^/\.venv/)'
 
 [tool.flake8]
 filename = ["*.py", "*.mpc"]
-exclude = ["redis*", ".venv"]
+exclude = [".venv"]
 max-line-length = 88
 extend-ignore = "E203"
 
 [tool.isort]
 profile = "black"
-skip_glob = ["redis*", ".venv"]
-supported_extensions = ["mpc", ]
+skip_glob = [".venv"]
+supported_extensions = ["mpc"]
